css/style.css
body {
  font-size: 16px;
  background: #121214 !important;
  height: 100%;
}

h1 {
  color:#212121;
  text-align: center;
}

.custom-file-upload {
  cursor: pointer;
  width: 100%;
  background-color: #2A2A2F;
  border: none;
  border-radius: 3px;
  height: 48px;
  font-size: 15px !important;
  padding: .680rem .9rem;
  box-shadow: none;
  color: rgba(255, 255, 255, 0.4);
  -webkit-transition: 0.2s;
  -o-transition: 0.2s;
  transition: 0.2s;
}

.custom-file-upload > svg {
  margin-right: 10px;
}

select:focus, input:focus, textarea:focus {
  border-bottom: solid 2px #1A7BEE;
  outline: 0;
}

.successFastAdd {
  color: #4CAF50;
}

.closeSettings {
  margin-top: 15px;
}

.retryFastAdd {
  margin-top: 15px !important;
  float: right;
}

.container {
  margin-top: 70px;
  background: #1B1B1E;
  padding: 15px;
  border-radius: 5px;
}

.selectsite {
  width: 100%;
  margin-bottom: 10px;
  color: rgba(255, 255, 255, 0.56);
  background: #2A2A2F;
  margin-right: 10px;
  padding: 9px 12px;
  font-size: 18px;
  outline: none;
  border: none;
  transition: 0.3s;
  cursor: pointer;
  border-radius: 3px;
}

.activeList {
  background: #1A7BEE;
  color: #fff;
}

select {
  cursor: pointer;
}

select, input, textarea {
  width: 100%;
  display: block;
  background-color: #2A2A2F;
  border: none;
  border-radius: 3px;
  height: 48px;
  font-size: 17px !important;
  padding: .375rem .9rem;
  box-shadow: none;
  color: rgba(255, 255, 255, 0.4);
  -webkit-transition: 0.2s;
  -o-transition: 0.2s;
  transition: 0.2s;
}

input[type="file"] {
  display: none;
}

button[type="submit"], .retryFastAdd {
  color: #fff;
  background: #1A7BEE;
  padding: 9px 25px;
  font-size: 18px;
  outline: none;
  border: none;
  transition: 0.3s;
  cursor: pointer;
  border-radius: 3px;
  max-width: 100%;
  height: auto;
  display: block;
  margin: 0 auto;
  border: none;
}

button[type="submit"]:hover {
  opacity: 0.85;
}

button[type="submit"]:focus {
  outline: 0;
  opacity: 0.5;
}

#addProjectDiv div:not(:first-of-type) {
  display: inline;
}

select:focus, input:focus {
  border-bottom: solid 2px #1A7BEE;
  outline: 0;
}

form {
  display: contents;
}

p, form, label, details {
  font-size: 19px;
}

.form-group label {
  color: rgba(255, 255, 255, 0.56);
  font-size: 15px;
  top: auto;
  left: auto;
}

/*Возможно уже бесполезно :| */
.listcontent div:first-of-type {
  padding: 0; 
}

.listcontent button, .closeSettings {
  color: #fff;
  background: #e53935;
  padding: 9px 30px;
  font-size: 18px;
  outline: none;
  border: none;
  transition: 0.2s;
  cursor: pointer;
  border-radius: 3px;
}

.closeSettings:hover {
  background: #d32f2f;
}

.retryFastAdd:hover {
  background: #1565C0;
}

.listcontent button:hover {
  opacity: 0.85;
}


.listcontent button:focus {
  outline: 0;
  opacity: 0.55;
}

::-webkit-scrollbar-button {
  background-image:url('');
  background-repeat:no-repeat;
  width:5px;
  height:0px;
}

::-webkit-scrollbar-track {
  background-color:#2A2A2F;
  border-radius: 2px;
}

::-webkit-scrollbar-thumb {
  border-radius: 0px;
  background: #1A7BEE;
  border-radius: 2px;
}

::-webkit-scrollbar-thumb:hover{
  background-color:#1a6fd6;
}

::-webkit-resizer{
  background-image:url('');
  background-repeat:no-repeat;
  width:4px;
  height:0px;
}

::-webkit-scrollbar{
  width: 5px;
  height: 5px;
}

.tablinks {
  width: 100%;
  display: block;
  height: 70px;
  color: rgba(255, 255, 255, 0.56);
  background: none;
  font-size: 13px;
  outline: none;
  border: none;
  cursor: pointer;
  border-radius: 0px;
  margin-bottom: 10px;
}

.tablinks:focus, .selectsite:focus, .closeSettings:focus, .retryFastAdd:focus {
  outline: 0;
}

.tablinks:hover, .selectsite:hover {
  opacity: 0.85;
}

.active {
  background: #1A7BEE;
  color: #fff;
}

.nav-panel {
  background: #2A2A2F;
  top: 0;
  position: fixed;
  left: 0;
  height: 100%;
  width: 101px;
  transition: 0.5s;
}

.nav-panel > div {
  border-bottom: solid 1px #fff;
  text-align: center;
  padding: 10px 0;
}

.hidden-menu {
  display: block;
  position: fixed;
  list-style:none;
  padding: 10px 0;
  margin: 0;
  box-sizing: border-box;
  width: 240px;
  background: #121214 !important;
  border: solid 1px rgba(255, 255, 255, 0.56);
  height: 100%;
  top: 0;
  left: -240px;
  transition: left .2s;
  z-index: 2;
  -webkit-transform: translateZ(0);
  -webkit-backface-visibility: hidden;
}
.hidden-menu-ticker {
  display: none !important;
}
.btn-menu {
  display: none;
  box-sizing: initial;
  color: rgba(255, 255, 255, 0.4);
  background-color: #2A2A2F;
  padding: 5px;
  position: fixed;
  top: 5px;
  left: 5px;
  cursor: pointer;
  transition: left .23s;
  z-index: 3;
  width: 30px;
  -webkit-transform: translateZ(0);
  -webkit-backface-visibility: hidden;
  border-radius: 4px;
  border: #fff 1px solid;
}
.btn-menu span {
  display: block;
  height: 5px;
  background-color: #fff;
  margin: 5px 0 0;
  transition: all .1s linear .23s;
  position: relative;
}
.btn-menu span.first {
  margin-top: 0;
}
.hidden-menu-ticker:checked ~ .btn-menu {
  left: 195px;
}
.hidden-menu-ticker:checked ~ .hidden-menu {
  left: 0;
}
.hidden-menu-ticker:checked ~ .btn-menu span.first {
  -webkit-transform: rotate(45deg);
  top: 10px;
}
.hidden-menu-ticker:checked ~ .btn-menu span.second {
  opacity: 0;
}
.hidden-menu-ticker:checked ~ .btn-menu span.third {
  -webkit-transform: rotate(-45deg);
  top: -10px;
}

.btn-menu-back {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background: #2A2A2F;
  height: 45px;
  display: none;
}

@media (min-width: 990px) {
  .closeSettings {
    width: 48% !important;
  }

  .retryFastAdd {
    width: 48% !important;
  }
}

@media (max-width: 770px) { 
  .tooltip1text, .tooltip1 {
    display: none !important;
  }

  .statsProject, .deleteProject {
    display: block;
    padding: 12px;
    margin-right: 0px !important;
    padding: 11px 12px !important;
  }

  .deleteProject {
    margin-top: 3px !important;
  }

  .listcontent li {
    min-height: 130px;
  }
}

@media (max-width: 1360px) {
  .nav-panel {
    width: 50px;
  }
  .nav-panel > div {
    font-size: 12px;
  }
  .tablinks {
    height: 50px;
    font-size: 0;
  }
}

@media (max-width: 1200px) {
  .btn-menu {
    display: inherit !important;
  }
  .nav-panel {
    display: none;
  }
  .tablinks > svg {
    float: left;
    margin-left: 20px;
  }
  .tablinks {
    font-size: 19px;
    width: 100%;
    border-radius: 3  px;
  }
  .btn-menu-back {
    display: block;
  }
}

.checkbox { display: none; }

.checkbox + label {
  position: relative;
  padding-left: 35px;
  margin-bottom: 20px;
  font: 14px/20px 'Open Sans', Arial, sans-serif;
  color: #ddd;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
}

.checkbox + label:last-child { margin-bottom: 0; }

.checkbox + label:before {
  content: '';
  display: block;
  width: 20px;
  height: 20px;
  border: 1px solid #6cc0e5;
  border-radius: 2px;
  position: absolute;
  left: 0;
  top: 0;
  opacity: .6;
  -webkit-transition: all .12s, border-color .08s;
  transition: all .12s, border-color .08s;
}

.checkbox:checked + label:before {
  width: 10px;
  top: -5px;
  left: 5px;
  border-radius: 0;
  opacity: 1;
  border-top-color: transparent;
  border-left-color: transparent;
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
}

.listcontent > label {
  color: #f44336;
}

#help p {
  text-align: center;
}

.anelumen {
  display: flex;
  position: fixed;
  left: 0;
  top: -100%;
  width: 100%;
  height: 100%;
  align-items: center;
  justify-content: center;
  opacity: 0;
  -webkit-transition: top 0s .7s, opacity .7s 0s;
  transition: top 0s .7s, opacity .7s 0s;
}

.anelumen:target {
  top: 0;
  opacity: 1;
  -webkit-transition: none;
  transition: none;
}

.anelumen figure {
  width: 100%;
  max-width: 530px;
  position: relative;
  transform: scale(0);
  background-color: #2A2A2F !important;
  transition: transform 500ms;
}

.anelumen figure > div {
  padding: 15px;
}

.anelumen figure > h2 {
  padding: 8px 15px !important;
}

.anelumen.lowingnuska figure {
  background: #f9f5f5;
  border-radius: 5px;
  border: 1px solid #aba4a4;
}

.anelumen.lowingnuska figure h2 {
  padding: 0em;
  margin-top: 0;
  margin-bottom: 0px;
  font-size: 25px;
  border-bottom: 1px solid #aba4a4;
}

.anelumen:target figure {
  transform: scale(1);
}

.anelumen:target ~ input ~ label ~ ul ~ div .tooltip1 {
   position: initial;
}

.anelumen:target ~ input ~ label ~ ul ~ div .nav-panel, .anelumen:target ~ input ~ label, .anelumen:target ~ input ~ ul {
   display: none !important;
}

figure svg {
  margin-right: 5px;
}

.anelumen.lowingnuska .compatibg-ukastywise {
  text-decoration: none;
  position: absolute;
  right: 8px;
  top: -5px;
  font-size: 41px;
  color: #9E9E9E;
}

.anelumen .nedismiseg {
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  position: fixed;
  background-color: rgba(10, 10, 10, 0.47);
  content: "";
  cursor: default;
  visibility: hidden;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.anelumen:target .nedismiseg {
  visibility: visible;
}

#authvk {
  transform: translateY(-3px);
  border: none;
  color: #1A7BEE;
  transition: 0.3s;
  background: none;
  box-shadow: none;
  padding: 0;
}

#authvk:hover {
  opacity: 0.85;
  outline: none;
}

#authvk:focus {
  outline: 0;
}

.tooltip1 {
  position: relative;
  display: inline-block;
  border-radius: 25px;
  background: #1A7BEE;
  width: 19px;
  height: 19px;
  cursor: help;
  line-height: 1.1;
  text-align: center;
  font-size: initial !important;
}

.tooltip1:before {
  content: "?";
  font-weight: 600;
}

.tooltip1 .tooltip1text {
  visibility: hidden;
  width: 350px;
  background-color: #000;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px;
  position: absolute;
  z-index: 1;
  bottom: 145%;
  margin-left: -179px;
  opacity: 0;
  transition: opacity 0.3s;
  font-size: initial !important;
}

.tooltip1 .tooltip1text::after {
  content: "";
  position: absolute;
  top: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: #000 transparent transparent transparent;
}

.tooltip1:hover .tooltip1text {
  visibility: visible;
  opacity: 1;
}

#cooldown, #submit2  {
  width: 48%;
  display: inline;
}

#addProjectDiv {
  text-align: center;
  font-size: 15px;
  margin-top: 10px;
}

.tooltip2 {
  border-radius: 25px;
  background: #1A7BEE;
  width: 19px;
  height: 19px;
  cursor: help;
  line-height: 1.1;
  text-align: center;
  font-size: initial !important;
  position: relative;
  display: inline-block;
  border-bottom: 1px dotted black;
}

.tooltip2:before {
  content: "?";
  font-weight: 600;
}

.tooltip2 .tooltip2text {
  visibility: hidden;
  background-color: black;
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px 0;
  position: absolute;
  z-index: 1;
  top: 155%;
  width: 350px;
  margin-left: -179px;
}

.tooltip2 .tooltip2text::after {
  content: "";
  position: absolute;
  bottom: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent black transparent;
}

.tooltip2:hover .tooltip2text {
  visibility: visible;
}

#idSelector {
  height: 95px;
}

textarea {
  height: 250px;
}

ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

ul li {
  margin-top: -1px; /* Prevent double borders */
  padding: 12px;
  text-decoration: none;
  font-size: 18px;
  display: block;
  position: relative;
}

ul li:hover {
  background-color: #2A2A2F !important;
  cursor: pointer;
}

.deleteProject:hover {
  background: #d32f2f;
}

.statsProject:hover {
  background: #1A7BEE;
}

.statsProject, .deleteProject {
  cursor: pointer;
  padding: 23px;
  transform: translate(0%, -50%);
}

.deleteProject {
  margin-right: 0.25rem;
}

.listcontent > li > div {
  float: right;
  margin-top: 14px;
}

